--- a/_sass/_text.scss
+++ b/_sass/_text.scss
@@ -1,3 +1,7 @@
+.bold     { font-weight: bold; }
+.regular  { font-weight: normal; }
+.italic   { font-style: italic; }
+
 .text-left    { text-align: left; }
 .text-right   { text-align: right; }
 .text-center  { text-align: center; }
