--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -101,7 +101,7 @@ $spacing-unit: 30px;
 
 .footer-heading {
     font-size: 18px;
-    margin-bottom: math.div($spacing-unit, 2);
+    margin-bottom: $spacing-unit / 2;
 }
 
 .contact-list,
@@ -113,14 +113,14 @@ $spacing-unit: 30px;
 .footer-col-wrapper {
     font-size: 15px;
     color: $grey-color;
-    margin-left: math.div($spacing-unit, 2);
+    margin-left: $spacing-unit / 2;
     @extend %clearfix;
 }
 
 .footer-col {
     float: left;
-    margin-bottom: math.div($spacing-unit, 2);
-    padding-left: math.div($spacing-unit, 2);
+    margin-bottom: $spacing-unit / 2;
+    padding-left: $spacing-unit / 2;
 }
 
 .footer-col-1 {
